--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
               </li>
               <li class="catalog-left__block" data-target="second" id="two">
                 <img
-                  src="/img/catalog/beneditto.jpg"
+                  src="./img/catalog/beneditto.jpg"
                   class="catalog-block__img"
                   alt="Бенедетто ди Биндо"
                 />
@@ -1056,7 +1056,7 @@
               </li>
               <li class="catalog-left__block" data-target="third" id="three">
                 <img
-                  src="/img/catalog/bergognone.jpg"
+                  src="./img/catalog/bergognone.jpg"
                   class="catalog-block__img"
                   alt="Бергоньоне, Амброджо"
                 />
@@ -1078,7 +1078,7 @@
               </li>
               <li class="catalog-left__block" data-target="fourth" id="four">
                 <img
-                  src="/img/catalog/bissollo.jpg"
+                  src="./img/catalog/bissollo.jpg"
                   class="catalog-block__img"
                   alt="Биссоло, Франческо"
                 />
@@ -1098,7 +1098,7 @@
               </li>
               <li class="catalog-left__block" data-target="fifth" id="five">
                 <img
-                  src="/img/catalog/bramantino.jpg"
+                  src="./img/catalog/bramantino.jpg"
                   class="catalog-block__img"
                   alt="Брамантино"
                 />
@@ -1120,7 +1120,7 @@
               </li>
               <li class="catalog-left__block" data-target="zero" id="null">
                 <img
-                  src="/img/catalog/noname.jpg"
+                  src="./img/catalog/noname.jpg"
                   class="catalog-block__img"
                   alt="Неизвестный"
                 />
