--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
                     class="swiper-slide gallery-slide"
                   >
                     <img
-                      src="/img/gallery-swiper/swiper-1.jpg"
+                      src="./img/gallery-swiper/swiper-1.jpg"
                       alt="картина Карла Брюллова - Итальянский полдень"
                     />
                   </button>
@@ -947,7 +947,7 @@
                     class="swiper-slide gallery-slide"
                   >
                     <img
-                      src="/img/gallery-swiper/swiper-2.jpg"
+                      src="./img/gallery-swiper/swiper-2.jpg"
                       alt="картина Фрагонара - Утес слепого"
                     />
                   </button>
@@ -956,7 +956,7 @@
                     class="swiper-slide gallery-slide"
                   >
                     <img
-                      src="/img/gallery-swiper/swiper-3.jpg"
+                      src="./img/gallery-swiper/swiper-3.jpg"
                       alt="картина Питера Пауля Рубенса - Самсон и Далила"
                     />
                   </button>
@@ -965,7 +965,7 @@
                     class="swiper-slide gallery-slide"
                   >
                     <img
-                      src="/img/gallery-swiper/swiper-4.jpg"
+                      src="./img/gallery-swiper/swiper-4.jpg"
                       alt="картина Казимира Малевича в стиле Супрематизм"
                     />
                   </button>
@@ -974,7 +974,7 @@
                     class="swiper-slide gallery-slide"
                   >
                     <img
-                      src="/img/gallery-swiper/swiper-5.jpg"
+                      src="./img/gallery-swiper/swiper-5.jpg"
                       alt="картина Казимира Малевича в стиле Кубофутуризм"
                     />
                   </button>
@@ -983,7 +983,7 @@
                     class="swiper-slide gallery-slide"
                   >
                     <img
-                      src="/img/gallery-swiper/swiper-6.jpg"
+                      src="./img/gallery-swiper/swiper-6.jpg"
                       alt="картина Казимира Малевича в стиле Супрематизм"
                     />
                   </button>
