--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </button>
               <a href="#" class="header__link" aria-label="Переход на главную">
                 <img
-                  src="./img/Logo.svg"
+                  src="./img/logo.svg"
                   alt="Логотип художественной галереи"
                   class="header-top__logo"
                 />
