--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@
                 id="one"
               >
                 <img
-                  src="/img/catalog/domeniko.jpg"
+                  src="./img/catalog/domeniko.jpg"
                   class="catalog-block__img"
                   alt="Доменико Гирландайо"
                 />
